tests/expectations/compiler/core/algorithms/pedersen128_hash_to_field.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `address` was found.
    --> compiler-test:29:51
     |
  29 |         let a: field = Pedersen128::hash_to_field(addr_value);
     |                                                   ^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `field` was found.
    --> compiler-test:31:51
     |
  31 |         let c: field = Pedersen128::hash_to_field(field_value);
     |                                                   ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `group` was found.
    --> compiler-test:32:51
     |
  32 |         let d: field = Pedersen128::hash_to_field(group_value);
     |                                                   ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `scalar` was found.
    --> compiler-test:41:51
     |
  41 |         let o: field = Pedersen128::hash_to_field(scalar_value);
     |                                                   ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `Foo` was found.
    --> compiler-test:43:51
     |
  43 |         let p: field = Pedersen128::hash_to_field(Foo { a: 1u32, b: 1u32 });
     |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^
"""]
